--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VITE_FIREBASE_API_KEY=
-VITE_FIREBASE_AUTH_DOMAIN=
-VITE_FIREBASE_PROJECT_ID=
-VITE_FIREBASE_STORAGE_BUCKET=
-VITE_FIREBASE_MESSAGING_SENDER_ID=
-VITE_FIREBASE_APP_ID=
-VITE_FIREBASE_MEASUREMENT_ID=
+VITE_FIREBASE_API_KEY=AIzaSyAXQHGyYEExqlsB7BJjR1-av3HB347Zp-k
+VITE_FIREBASE_AUTH_DOMAIN=proyecto2025-6d036.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=proyecto2025-6d036
+VITE_FIREBASE_STORAGE_BUCKET=proyecto2025-6d036.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=324170830562
+VITE_FIREBASE_APP_ID=1:324170830562:web:3369707f793e40884784bb
+VITE_FIREBASE_MEASUREMENT_ID=G-G-WTHP49KHDY
